# Miamo

./: .dockerignore  .env.example  .git-commit-msg  .gitattributes  .gitignore  CHANGELOG.md  FULL_AUDIT_AND_LEARNING_V2_PROMPT.md  HANDOFF.md  HOSTING.md  INFRA_AUDIT.md  MIAMO.md  MOBILE.md  MOBILE_LAUNCH_CHECKLIST.md  PRODUCTION_LAUNCH_PROMPT.md  README.md  docker-compose.yml  knip.json  package-lock.json  package.json  playwright.config.ts  vitest.config.ts  vitest.e2e.config.ts  vitest.fast.config.ts
.github/: dependabot.yml
api/: .env.example  Dockerfile  package-lock.json  package.json  vitest.config.ts
docker/: Dockerfile.gateway  Dockerfile.migrate  Dockerfile.service  Dockerfile.web  auth.Dockerfile  content.Dockerfile  gateway.Dockerfile  ingest.Dockerfile  messaging.Dockerfile  migrate-and-seed.sh  migrate.Dockerfile  nginx.conf  notifications.Dockerfile  social.Dockerfile  tracking-worker.Dockerfile  users.Dockerfile  web.Dockerfile
docs/: ACCESS_CONTROL.md  ALGORITHMS.md  ALGORITHMS_V4_PROMPT.md  API.md  ARCHITECTURE.md  DATA_MODEL.md  DESIGN_PROMPT.md  DEVOPS.md  FAQ.md  (+14 more)
tools/miamo_cli/: README.md  pyproject.toml
tools/miamo_cli/src/miamo_cli/: __init__.py  __main__.py  cli.py  config.py  env.py  shell.py
tools/miamo_cli/src/miamo_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/miamo_cli/src/miamo_cli/commands/: __init__.py  chaos.py  data.py  db.py  dev.py  docker_mode.py  health.py  info.py  k8s.py  load.py  local.py  mobile.py  monitor.py  prisma.py  release.py  router.py  service.py  setup.py
(+2773 files in other folders)
