[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "miamo-cli"
version = "1.0.0"
description = "Miamo unified operations CLI (replaces scripts/*.sh)."
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "psutil>=5.9",
]

[project.scripts]
miamo = "miamo_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
